# bitgesell

./: .appveyor.yml  .cirrus.yml  .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  Erroneous Files  INSTALL.md  Information.py  Makefile  Makefile.am  README-zh.md  README.md  SECURITY.md  configure.ac  information.py  libBGLconsensus.pc.in
src/: .changes!  .clang-tidy  BGL-chainstate.cpp  BGL-cli-res.rc  BGL-cli.cpp  BGL-tx-res.rc  BGL-tx.cpp  BGL-util-res.rc  BGL-util.cpp  BGL-wallet-res.rc  BGL-wallet.cpp  BGLd-res.rc  BGLd.cpp  Makefile.am  Makefile.bench.include  Makefile.minisketch.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  addrdb.cpp  addrdb.h  addresstype.cpp  addresstype.h  addrman.cpp  addrman.h  addrman_impl.h  amount.h  arith_uint256.h  assumptions.h  attributes.h  banman.cpp  banman.h  base58.cpp  base58.h  bech32.cpp  bech32.h  bench.c  (+151 more)
src/bench/: .gitignore  base58.cpp  bench.h  bench_BGL.cpp  block_assemble.cpp  ccoins_caching.cpp  chacha20.cpp  checkqueue.cpp  coin_selection.cpp  data.h  descriptors.cpp  gcs_filter.cpp  prevector.cpp  verify_script.cpp  wallet_balance.cpp  wallet_create.cpp  wallet_ismine.cpp  wallet_loading.cpp
src/common/: args.cpp  args.h  bloom.h  config.cpp  init.cpp  init.h  messages.h  run_command.cpp  run_command.h  settings.cpp  settings.h  signmessage.cpp  signmessage.h  system.cpp  system.h  types.h  url.h
src/compat/: assumptions.h  byteswap.h  compat.h  cpuid.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibc_sanity_fdelt.cpp  sanity.h  stdin.cpp  stdin.h  strnlen.cpp
src/config/: BGL-config.h  BGL-config.h.in  stamp-h1
src/consensus/: amount.h  consensus.h  merkle.h  params.h  tx_check.h  tx_verify.cpp  tx_verify.h  validation.h
src/crypto/: aes.h  chacha20.cpp  chacha20.h  chacha20poly1305.cpp  chacha20poly1305.h  chacha_poly_aead.cpp  chacha_poly_aead.h  common.h  hex_base.cpp  hex_base.h  hkdf_sha256_32.h  hmac_sha256.h  hmac_sha512.h  muhash.cpp  muhash.h  poly1305.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha256_arm_shani.cpp  sha3.h  sha512.h  siphash.h
src/index/: base.cpp  base.h  blockfilterindex.cpp  blockfilterindex.h  coinstatsindex.cpp  coinstatsindex.h  disktxpos.h  txindex.cpp  txindex.h
src/init/: BGL-gui.cpp  BGL-node.cpp  BGL-qt.cpp  BGL-wallet.cpp  BGLd.cpp  common.cpp  common.h
src/interfaces/: README.md  chain.cpp  chain.h  echo.h  handler.h  init.cpp  init.h  ipc.h  mining.h  node.cpp  node.h  wallet.cpp  wallet.h
src/ipc/: context.h  exception.h  process.h  protocol.h
src/kernel/: blockmanager_opts.h  chain.h  chainparams.cpp  chainparams.h  chainstatemanager_opts.h  checks.cpp  checks.h  coinstats.cpp  coinstats.h  context.cpp  context.h  cs_main.h  disconnected_transactions.h  mempool_entry.h  mempool_limits.h  mempool_options.h  mempool_persist.cpp  mempool_persist.h  mempool_removal_reason.h  messagestartchars.h  notifications_interface.h  validation_cache_sizes.h  warning.h
src/logging/: timer.h
src/node/: README.md  abort.h  blockmanager_args.h  blockstorage.cpp  blockstorage.h  caches.cpp  caches.h  chainstate.cpp  chainstate.h  chainstatemanager_args.h  coin.cpp  coin.h  coins_view_args.h  coinstats.cpp  coinstats.h  connection_types.cpp  connection_types.h  context.cpp  context.h  database_args.h  eviction.cpp  eviction.h  interface_ui.cpp  interface_ui.h  interfaces.cpp  kernel_notifications.cpp  kernel_notifications.h  mempool_args.h  mempool_persist.h  mempool_persist_args.h  miner.cpp  miner.h  mini_miner.cpp  mini_miner.h  minisketchwrapper.h  peerman_args.cpp  peerman_args.h  protocol_version.h  psbt.cpp  psbt.h  (+13 more)
src/policy/: feerate.cpp  feerate.h  fees.cpp  fees.h  fees_args.h  packages.cpp  packages.h  policy.cpp  policy.h  rbf.cpp  rbf.h  settings.h  truc_policy.cpp  truc_policy.h  v3_policy.cpp
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: BGL.cpp  BGL.h  BGL.qrc  BGL_locale.qrc  BGLaddressvalidator.cpp  BGLaddressvalidator.h  BGLamountfield.cpp  BGLamountfield.h  BGLamountfield.moc  BGLgui.cpp  BGLgui.h  BGLstrings.cpp  BGLunits.cpp  BGLunits.h  Makefile  README.md  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  createwalletdialog.cpp  createwalletdialog.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  initexecutor.cpp  initexecutor.h  intro.cpp  intro.h  (+80 more)
src/rpc/: blockchain.cpp  blockchain.h  client.cpp  client.h  external_signer.cpp  mempool.cpp  mempool.h  mining.cpp  mining.h  misc.cpp  net.cpp  net.h  node.cpp  output_script.cpp  protocol.h  rawtransaction.cpp  rawtransaction_util.cpp  rawtransaction_util.h  register.h  request.cpp  request.h  server.cpp  server.h  server_util.h  util.cpp  util.h
src/script/: BGLconsensus.cpp  BGLconsensus.h  descriptor.cpp  descriptor.h  interpreter.cpp  interpreter.h  keyorigin.h  miniscript.cpp  miniscript.h  parsing.cpp  parsing.h  script.h  script_error.cpp  script_error.h  sigcache.h  sign.cpp  sign.h  signingprovider.cpp  signingprovider.h  solver.cpp  solver.h  standard.cpp  standard.h
src/secp256k1/: CMakeLists.txt  CMakePresets.json  Makefile.am  README.md  configure.ac  libsecp256k1.pc.in
src/support/: cleanse.cpp  cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/test/: Makefile  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bech32_tests.cpp  bip324_tests.cpp  bip32_tests.cpp  blockencodings_tests.cpp  blockfilter_index_tests.cpp  blockmanager_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  denialofservice_tests.cpp  descriptor_tests.cpp  flatfile_tests.cpp  fs_tests.cpp  getarg_tests.cpp  (+47 more)
(+1324 files in other folders)
